# deskbridge

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: build-linux.yml  build-windows.yml
assets/: deskbridge.icns
packaging/windows/: deskbridge.iss  deskbridge.rc
scripts/: package_macos.sh  package_windows.ps1  run_linux_safe.sh  setup_linux_uinput.sh  uninstall_windows.ps1
src/: client.rs  config.rs  control.rs  file_transfer.rs  gui.rs  macos_status_item.m  main.rs  platform.rs  pointer.rs  pointer_trace.rs  protocol.rs  server.rs  shutdown.rs  transport.rs
src/clipboard/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/input/: linux.rs  macos.rs  macos_native.c  macos_native.h  mod.rs  unsupported.rs  windows.rs
src/linux/: mod.rs
src/server/: linux.rs  macos.rs  macos_capture.rs  unsupported.rs  windows.rs
tests/pointer_metrics/: README.md  analyze_pointer_trace.py  sample_trace.csv
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.jsx  style.css
