[package]
name = "deskbridge"
version = "1.1.3"
edition = "2024"

[dependencies]
eframe = "0.32"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cc = "1.2"
